# Exel_Finder

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.cpp  settings.h  settings.ui
translations/: exelfinder_en.qm  exelfinder_en.ts  exelfinder_ru.qm  exelfinder_ru.ts
